k8s/applications/event-gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: event-gateway
  namespace: artifact-platform

spec:
  type: ClusterIP

  selector:
    app: event-gateway

  ports:
    - name: http
      port: 8080
      targetPort: http
