k8s/applications/event-gateway/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress

# metadata:
#   name: event-gateway
#   namespace: artifact-platform

# spec:
#   ingressClassName: nginx

#   rules:
#     - host: app.local

#       http:
#         paths:
#           - path: /webhook
#             pathType: Prefix

#             backend:
#               service:
#                 name: event-gateway
#                 port:
#                   number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: event-gateway
  namespace: artifact-platform

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: event-gateway
                port:
                  number: 8080
